<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Daniel Nguyen -->
    <string name="email">dxungngh@gmail.com</string>
    <string name="my_store">market://search?q=pub:Nguyen%20Hoang%20Dung</string>
    <string name="send_email">Send email</string>
    <!-- Math Alarm Activity -->
    <string name="app_name">Funny Alarm</string>
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>
    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_rate">Rate on Goolge Play</string>
    <string name="menu_item_other_apps">Other Applications</string>
    <string name="menu_item_contact_author">Send mail to author</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>
    <string name="button_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_this_alarm">Delete this alarm ?</string>

    <!-- Toast -->
    <string name="could_not_launch_the_market">Could not launch the market</string>

    <!-- Admob -->
    <string name="admob_id">a1530ee2c996770</string>

</resources>