<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/alarm_toolbar_height"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/textView_title_bar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/alarm_toolbar_padding_left"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/primary_text_light" />

        <ImageButton
            android:id="@+id/button_new"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/button_new"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/button_delete"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <View
        android:id="@+id/title_border_bottom"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="0dp"
        android:background="@color/holo_blue_light" />

</LinearLayout>