<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- Toolbar -->

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <!-- admob -->

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@id/footer_admob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_id" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/no_alarms" />

    <LinearLayout
        android:id="@+id/okCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/alarm_preferences_button_height"
            android:layout_marginBottom="@dimen/alarm_preferences_button_margin_vertical"
            android:layout_marginLeft="@dimen/alarm_preferences_button_margin_horizon"
            android:layout_marginRight="@dimen/alarm_preferences_button_margin_horizon"
            android:layout_marginTop="@dimen/alarm_preferences_button_margin_vertical"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_OK"
            android:layout_width="0dp"
            android:layout_height="@dimen/alarm_preferences_button_height"
            android:layout_marginBottom="@dimen/alarm_preferences_button_margin_vertical"
            android:layout_marginLeft="@dimen/alarm_preferences_button_margin_horizon"
            android:layout_marginRight="@dimen/alarm_preferences_button_margin_horizon"
            android:layout_marginTop="@dimen/alarm_preferences_button_margin_vertical"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>